<resources>
    <string name="field_book">Field Book</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_confirm">Are you sure?</string>
    <string name="dialog_import">Import</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_go">Go</string>
    <string name="dialog_save_error_title">Save Error</string>
    <string name="dialog_back">Back</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_scan">Scan</string>
    <string name="dialog_sort_by">Sort By</string>
    <string name="dialog_enable">Enable</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_exit">Exit</string>
    <string name="barcode_scanner_text">Scan a barcode</string>
    <string name="appbar_more_options">More Options</string>
    <string name="appbar_back">Back</string>
    <string name="startup_sample_data_title">Sample data</string>
    <string name="startup_sample_data_message">Load sample data?</string>
    <string name="app_intro_intro_title_slide1">Welcome to Field Book!</string>
    <string name="app_intro_intro_summary_slide1">Collecting data in the field has traditionally required writing and transcribing from paper notebooks. Field Book was created as a digital solution for data capture that enables increased collection speed with greater data integrity.</string>
    <string name="app_intro_intro_title_slide2">Features and Customization</string>
    <string name="app_intro_intro_summary_slide2">Data is entered into Field Book with custom trait layouts that are designed to simplify data input and minimize mistakes.\n\n By default, collected data is stored locally, but Field Book supports the Breeding API which allows it to send data to BrAPI-compatible systems.</string>
    <string name="app_intro_required_setup_title">Required Setup</string>
    <string name="app_intro_required_setup_summary">To get started using Field Book, grant the necessary permissions for the app and then define a folder where your data will be stored.</string>
    <string name="app_intro_permissions_title">Permissions</string>
    <string name="app_intro_permissions_warning">Please grant the necessary permissions</string>
    <string name="app_intro_storage_title">Define Storage</string>
    <string name="app_intro_storage_summary">Define a folder where your data will be stored.</string>
    <string name="app_intro_storage_warning">Please set the storage location</string>
    <string name="app_intro_required_optional_title">Optional Setup</string>
    <string name="app_intro_required_optional_summary">These optional settings customize Field Book and can be adjusted in the Field Book Settings.</string>
    <string name="app_intro_load_sample_data_title">Load Sample Data</string>
    <string name="app_intro_load_sample_data_summary">Import a sample database that includes example fields and traits.</string>
    <string name="app_intro_tutorial_title">Tutorial</string>
    <string name="main_toolbar_resources">Resources</string>
    <string name="main_toolbar_next_entry_no_data">Next entry with no data</string>
    <string name="main_toolbar_moveto">Go to ID</string>
    <string name="main_toolbar_barcode_scan">Scan barcode</string>
    <string name="main_toolbar_search">Search</string>
    <string name="menu_collect_start_geo_nav_title">Start GeoNav</string>
    <string name="preferences_appearance_application_title">Application</string>
    <string name="preferences_appearance_theme_title">Theme</string>
    <string name="preferences_appearance_theme_summary">Modify specific colors or the entire theme of Field Book</string>
    <string name="preferences_theme_theme_title">App Theme</string>
    <string name="preferences_theme_text_size_title">Text Size</string>
    <string name="preferences_theme_data_saved_title">Saved data color</string>
    <string name="preferences_theme_data_saved_description">Change how saved data is displayed</string>
    <string name="preferences_theme_reset_title">Restore default theme</string>
    <string name="preferences_theme_reset_description">Reset all settings to the system default values</string>
    <string name="preferences_appearance_language">Language</string>
    <string name="preferences_appearance_language_description">Language set by system</string>
    <string name="preference_language_default">System Language</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_am" translatable="false">አማርኛ</string>
    <string name="language_ar" translatable="false">اَلْعَرَبِيَّةُ</string>
    <string name="language_bn" translatable="false">বাংলা</string>
    <string name="language_de" translatable="false">Deutsche</string>
    <string name="language_es" translatable="false">Español</string>
    <string name="language_fr" translatable="false">Français</string>
    <string name="language_hi" translatable="false">हिन्दी</string>
    <string name="language_it" translatable="false">Italiana</string>
    <string name="language_ja" translatable="false">日本語</string>
    <string name="language_om_rET" translatable="false">Afaan Oromoo</string>
    <string name="language_pt_rBR" translatable="false">Português</string>
    <string name="language_ru" translatable="false">Русский</string>
    <string name="language_zh_rCN" translatable="false">简体字</string>
    <string name="preferences_appearance_collect_toolbar_title">Collect Toolbar</string>
    <string name="preferences_appearance_tutorial_description">Add a toolbar button throughout the app that opens the tutorial</string>
    <string name="preferences_appearance_toolbar_customize">Toolbar Actions</string>
    <string name="preferences_appearance_toolbar_customize_description">Toggle the visibility of default features</string>
    <string name="preferences_appearance_toolbar_customize_search">Search</string>
    <string name="preferences_appearance_toolbar_customize_resources">Resources</string>
    <string name="preferences_appearance_toolbar_customize_summary">Summary</string>
    <string name="preferences_appearance_toolbar_customize_lock">Lock</string>
    <string name="preferences_general_feature_datagrid">Datagrid</string>
    <string name="preferences_general_feature_datagrid_description">Add a button to display a grid of collected data</string>
    <string name="preferences_general_feature_next_missing">Next Entry With No Data</string>
    <string name="preferences_general_feature_barcode_text">Move To Unique ID</string>
    <string name="preferences_appearance_collect_screen_title">Collect Screen</string>
    <string name="preferences_appearance_infobar_number">Number Of InfoBars</string>
    <string name="preferences_appearance_infobar_number_description">Adjust the number of Infobars displayed on the main screen</string>
    <string name="preferences_appearance_infobar_hide_prefix">Hide Infobar prefix</string>
    <string name="preferences_appearance_infobar_hide_prefix_description">Infobar prefix will be replaced by a generic icon</string>
    <string name="pref_geonav_enable_title">Enable GeoNav</string>
    <string name="pref_geonav_enable_summary">Navigate fields using device location</string>
    <string name="pref_geonav_search_method_title">Search Method</string>
    <string name="pref_geonav_search_method_summary">The %s method used to search for plots in GeoNav</string>
    <string name="pref_behavior_geonav_parameters_category_title">Parameters</string>
    <string name="pref_geonav_search_trapezoid_d1_title">Trapezoid Base (km)</string>
    <string name="pref_geonav_search_trapezoid_d1_summary">The shorter base of the trapezoid is %s km</string>
    <string name="pref_geonav_search_trapezoid_d2_title">Trapezoid Distance (km)</string>
    <string name="pref_geonav_search_trapezoid_d2_summary">The distance from the user to the opposite end of the trapezoid is %s km</string>
    <string name="pref_geonav_search_angle_summary">GeoNav creates a trapezoid in front of the user, the angle closest to the user is defined as %s°</string>
    <string name="pref_geonav_search_angle_title">GeoNav Search Angle (degrees)</string>
    <string name="pref_geonav_update_interval_title">Update Interval (s)</string>
    <string name="pref_geonav_update_interval_summary">The time between location updates is %ss</string>
    <string name="pref_geonav_pair">Location Provider</string>
    <string name="preferences_storage_storage_title">Storage</string>
    <string name="preferences_storage_files_base_directory_title">Define Storage Location</string>
    <string name="preferences_storage_files_base_directory_description">Migrate or define a new root directory structure. Export files will be saved here automatically.</string>
    <string name="preferences_storage_database_title">Database</string>
    <string name="database_import">Import Database</string>
    <string name="database_export">Export Database</string>
    <string name="database_reset">Delete Database</string>
    <string name="preferences_experimental_stable_title">Stable</string>
    <string name="preferences_experimental_beta_title">Beta</string>
    <string name="preferences_experimental_alpha_title">Alpha</string>
    <string name="pref_experimental_repeated_values_title">Repeated Measures</string>
    <string name="pref_experimental_repeated_values_summary">Enables multiple values to be collected for each entry/trait</string>
    <string name="pref_experimental_enable_field_audio_title">Enable Field Audio</string>
    <string name="pref_experimental_enable_field_audio_summary">Enable audio recording feature for the entire field</string>
    <string name="pref_beta_mlkit_title">MLKit Library</string>
    <string name="pref_beta_mlkit_summary">This option uses the MLKit library instead of the ZXing library for scanning barcodes</string>
    <string name="preferences_brapi_enable_title">Enable BrAPI</string>
    <string name="preferences_brapi_enable_summary">The Breeding API allows simple data transfer to compatible databases.</string>
    <string name="brapi_section_active_server">Active Server</string>
    <string name="brapi_section_available_servers">Available Servers</string>
    <string name="brapi_add_account">Add Account</string>
    <string name="brapi_advanced_settings">Transmission Settings</string>
    <string name="tutorial_dialog_title">Tutorial</string>
    <string name="pref_canon_ip_title">Canon IP Address</string>
    <string name="pref_canon_port_title">Canon Port</string>
    <string name="pref_canon_ssid_summary">This name is used to find your device\'s AP. This name must be contained within the actual SSID.</string>
    <string name="pref_canon_title">SSID Name</string>
    <string name="pref_canon_ip_summary">This is the ip displayed on your camera when setting up the AP.</string>
    <string name="pref_canon_port_summary">This is the port displayed on your camera when setting up the AP.</string>
    <string name="pref_canon_help_title">Help</string>
    <string name="pref_canon_help_summary">This will open a URL to the FieldBook Canon manual.</string>
    <string name="pref_canon_debug_title">Debug</string>
    <string name="pref_canon_debug_summary">A preferences for developers to monitor device output.</string>
    <string name="pref_alpha_enhanced_brapi_import_summary">When enabled, a new BrAPI import UI will be used for studies and traits.</string>
    <string name="pref_alpha_brapi_import_title">New BrAPI Import UI</string>
</resources>