<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="Canon"
        android:icon="@drawable/wifi"
        android:key="com.tracker.fieldbook.preferences.keys.canon.ssid_name"
        android:summary="@string/pref_canon_ssid_summary"
        android:title="@string/pref_canon_title" />

    <EditTextPreference
        android:defaultValue="192.168.1.2"
        android:icon="@drawable/ic_pref_brapi_server"
        android:key="com.tracker.fieldbook.preferences.keys.canon.ip"
        android:summary="@string/pref_canon_ip_summary"
        android:title="@string/pref_canon_ip_title" />

    <EditTextPreference
        android:defaultValue="15740"
        android:icon="@drawable/ic_pref_brapi_server"
        android:key="com.tracker.fieldbook.preferences.keys.canon.port"
        android:summary="@string/pref_canon_port_summary"
        android:title="@string/pref_canon_port_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_trait_text"
        android:key="com.tracker.fieldbook.preferences.keys.canon.debug"
        android:summary="@string/pref_canon_debug_summary"
        android:title="@string/pref_canon_debug_title" />

    <Preference
        android:icon="@drawable/ic_about_info"
        android:key="com.tracker.fieldbook.preferences.keys.canon.help"
        android:summary="@string/pref_canon_help_summary"
        android:title="@string/pref_canon_help_title"/>

</PreferenceScreen>