<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="experimental_settings_stable"
        android:title="@string/preferences_experimental_stable_title"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_repeated_measures"
            android:key="com.tracker.fieldbook.preferences.keys.repeated_values"
            android:summary="@string/pref_experimental_repeated_values_summary"
            android:title="@string/pref_experimental_repeated_values_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="experimental_settings_beta"
        android:title="@string/preferences_experimental_beta_title"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_tb_field_mic_on"
            android:key="com.tracker.fieldbook.preferences.keys.enable_field_audio"
            android:summary="@string/pref_experimental_enable_field_audio_summary"
            android:title="@string/pref_experimental_enable_field_audio_title" />


        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/qrcode_scan"
            android:key="com.tracker.fieldbook.preferences.keys.mlkit"
            android:summary="@string/pref_beta_mlkit_summary"
            android:title="@string/pref_beta_mlkit_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="experimental_settings_alpha"
        android:title="@string/preferences_experimental_alpha_title"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_pref_brapi_server"
            android:key="com.tracker.fieldbook.preferences.keys.enable_enhanced_brapi_import"
            android:summary="@string/pref_alpha_enhanced_brapi_import_summary"
            android:title="@string/pref_alpha_brapi_import_title" />

    </PreferenceCategory>

</PreferenceScreen>
