<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_tb_help"
        app:showAsAction="always"
        android:title="@string/tutorial_dialog_title" />
    <item
        android:id="@+id/nextEmptyPlot"
        android:icon="@drawable/ic_tb_forward"
        app:showAsAction="always"
        android:title="@string/main_toolbar_next_entry_no_data" />
    <item
        android:id="@+id/jumpToPlot"
        android:icon="@drawable/ic_tb_barcode"
        app:showAsAction="always"
        android:title="@string/main_toolbar_moveto" />
    <item
        android:id="@+id/barcodeScan"
        android:icon="@drawable/ic_tb_barcode_scan"
        app:showAsAction="always"
        android:title="@string/main_toolbar_barcode_scan" />
    <item
        android:id="@+id/datagrid"
        android:icon="@drawable/ic_tb_datagrid"
        app:showAsAction="always"
        android:title="@string/preferences_general_feature_datagrid" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_tb_search"
        app:showAsAction="always"
        android:title="@string/main_toolbar_search" />
    <item
        android:id="@+id/resources"
        android:icon="@drawable/ic_tb_folder"
        app:showAsAction="always"
        android:title="@string/main_toolbar_resources" />
    <item
        android:id="@+id/summary"
        android:icon="@drawable/ic_tb_details"
        app:showAsAction="always"
        android:title="@string/preferences_appearance_toolbar_customize_summary" />
    <item
        android:id="@+id/lockData"
        android:icon="@drawable/ic_tb_lock"
        app:showAsAction="always"
        android:title="" />
    <item
        android:id="@+id/action_act_collect_geonav_sw"
        android:icon="@drawable/ic_explore_off_black_24dp"
        app:showAsAction="always"
        android:title="@string/menu_collect_start_geo_nav_title"/>
</menu>

