<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
android:title="@string/customize_toolbar"
android:key="pref_toolbar">

<CheckBoxPreference
    android:defaultValue="true"
    android:icon="@drawable/ic_tb_search"
    android:key="TOOLBAR_SEARCH"
    android:title="@string/preferences_appearance_toolbar_customize_search" />
<CheckBoxPreference
    android:defaultValue="true"
    android:icon="@drawable/ic_tb_folder"
    android:key="TOOLBAR_RESOURCES"
    android:title="@string/preferences_appearance_toolbar_customize_resources" />
<CheckBoxPreference
    android:defaultValue="true"
    android:icon="@drawable/ic_tb_details"
    android:key="TOOLBAR_SUMMARY"
    android:title="@string/preferences_appearance_toolbar_customize_summary" />
<CheckBoxPreference
    android:defaultValue="true"
    android:icon="@drawable/ic_tb_lock"
    android:key="TOOLBAR_LOCK"
    android:title="@string/preferences_appearance_toolbar_customize_lock" />
</PreferenceScreen>